# cuda-speedrun

./: .gitignore  CMakeLists.txt  README.md  retrieve.sh  run-clang-format.py  session.vim  session.vim!
fcl/: CMakeLists.txt  buffer.h  divergent_kernels.cu  divergent_kernels.h  error.cu  error.h  examples.cu  examples.h  frontend.cc  kernels.cu  kernels.h  memory-hw.cu  parallel.cu  serial.c  timer.cc  timer.h  types.cc  types.h  utils.h
iitm-jan23-gpu/: 1d.cu  c++.cu  coalescing.cu  divergence-switch.cu  divergence.cu  hellocomm.cu  hellogpu.cu  linkedlist.cu  syncthreads.cu
iitm-jan23-gpu/gpu-programming/: 4x3.cu  array.cu  atomic-worklist-different.cu  atomicinc.cu  banks.cu  block.cu  coalescing2.cu  convolution.cu  cooperative-kernels.cu  counter.cu  cpugpu.cu  cpugpu2.cu  dynpar2.cu  dynpar4.cu  dynpar6.cu  encrypt.cu  event.cu  gdb3.cu  global-barrier-atomics.cu  global-barrier-no.cu  global-barrier.cu  hostalloc-functions.cu  hostalloc-functions2.cu  hostalloc.cu  linkedlist-add.cu  matmul.c  multi-device.cu  nvprof4.cu  omp4.cu  omp5.cu  omp6.cu  omp7.cu  pragma.cu  raunak.cu  scan.cu  shared-dynamic-multiple.cu  shared-dynamic.cu  shared2.cu  stream.cu  streamcallback.cu  (+8 more)
own/: memory-hw.cu  memory.cu  multi-dimensional.cu  parallel.cu
reference/: 1d-general.cu  2d.cu  functions.cu  globalvar.cu  gridblockthread.cu  helloerror.cu  hellogpusync.cu  helloparallel.cu  mm.cu  mm2.cu  mm3.cu  multifile-cfunction.c  multifile.cu  recursion.cu  scan.cu  soa.cu
reference/gpu-programming/: 1to10.cu  addvec.cu  async.cu  async2.cu  atomic-lock.cu  constant.cu  (+40 more)
(+7 files in other folders)
